--- a/src/WebSite/index.html
+++ b/src/WebSite/index.html
@@ -9,7 +9,9 @@
         
         <script src="./js/bootstrap.min.js"></script>
         <script src="./js/jquery-ui.min.js"></script>
-        <link rel="stylesheet" href="./css/bootstrap-flatly.min.css">
+        <script data-require="angular-ui-bootstrap@0.11.0" data-semver="0.11.0" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
+        <!--<link rel="stylesheet" href="./css/bootstrap-flatly.min.css">-->
+        <link rel="stylesheet" href="./css/bootstrap-cerulean.min.css">
         <link rel="stylesheet" href="./css/MTGBO.css">
         <link rel="stylesheet" href="./css/jquery-ui.min.css">
         
