--- a/src/WebSite/index.html
+++ b/src/WebSite/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html ng-app="MtgboApp">
     <head>
-        <script src="js/jquery-2.1.1.min.js"></script>
+        <script src="js/jquery-2.1.1.min.js"></script>        
         <script src="js/angular.min.js"></script>
         <script src="js/angular-route.min.js"></script>
         <script src="js/angular-resource.min.js"></script>
+        <script src="js/underscore-min.js"></script>
         <script src="js/MTGBO.Core.js"></script>
         
         <script src="./js/bootstrap.min.js"></script>
